--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -1,3 +1,4 @@
+
 /*main menu */
 .main-nav {
   display: flex;
@@ -13,6 +14,7 @@ nav > ul {
   display: flex;
   align-content: center;
   justify-content: center;
+  font-family: 'VT323', monospace;
 }
 
 nav > ul > li {
