--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ h1, h2, h3 {
   font-size: 0.6rem;
 }
 
+pre {
+  tab-size: 1;
+}
+pre code { white-space: pre; }
 /* animation */
 
 @keyframes blinker {
