--- a/src/Nathias/Nathias.css
+++ b/src/Nathias/Nathias.css
@@ -25,6 +25,10 @@
   color: #111;
 }
 
+div > pre > code {
+    white-space: pre-wrap;
+  }
+
 @media only screen and (max-width: 650px), only screen and (max-height: 800px) {
 
   #logo {
